tests/baselines/reference/literals-negative.errors.txt
tests/cases/compiler/literals-negative.ts(5,9): error TS2352: Type 'number' cannot be converted to type 'boolean'.


==== tests/cases/compiler/literals-negative.ts (1 errors) ====
    // Type type of the null literal is the Null type.
    // Null can be converted to anything except Void
    var n = <number>(null);
    var s = <string>(null);
    var b = <boolean>(n);
            ~~~~~~~~~~~~
!!! error TS2352: Type 'number' cannot be converted to type 'boolean'.
    
    function isVoid() : void { }
    
    // Expected error: Values of type null and void cannot be compared
    if(null === isVoid()) { }
    